# mq-image-analyze

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SKILLS.md  pyproject.toml  release-check.sh  repo-signal.yml
.github/workflows/: examples.yml  release.yml  tests.yml
.mq/: repo-contract.json
docs/: MQ_MCP_COMPATIBILITY.md  _config.yml  architecture.md  cli.md  content-policy.md  index.md  integration.md  json-schema.md  mcp-tools.md  model-setup.md  release.md  tool-safety.md  visual-architecture-schema.md
examples/: architecture-observation.json  mq-agent-workflow.md  sample-analysis.json  sample-cli-output.txt  sample-reverse-prompt.md  sample-ui-review.md
examples/mcp-payloads/: analyze_image.json  analyze_ui.json  compare_images.json  extract_palette.json  image_ocr.json  observe_architecture.json  reverse_prompt.json
mq_image_analyze/cli/: __init__.py  analyze.py  analyze_ui.py  compare.py  doctor.py  observe_architecture.py  serve.py  serve_mcp.py
mq_image_analyze/mcp/: server.py
scripts/: check-mcp-sample-payloads.py  check-skills.sh  mqlaunch-bridge.sh  validate.sh
skills/repo-aware/: SKILL.md
tests/: conftest.py  test_analyze_ui.py  test_architecture.py  test_cli.py  test_compare.py  test_composition.py  test_doctor.py  test_exhaustive.py  test_json_schema.py  test_mcp_sample_payloads.py  test_mcp_tools.py  test_ocr.py  test_palette.py  test_reverse_prompt.py  test_semantic_provider.py  test_version_consistency.py  test_web_package.py
web/: index.html  server.py
(+30 files in other folders)
