[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mq-image-analyze"
version = "0.1.0"
description = "Visual reasoning infrastructure for image analysis"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.4",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
mq-image = "mq_image_analyze.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mq_image_analyze*"]
