[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mq-image-analyze"
version = "1.0.0"
description = "Visual reasoning infrastructure for image analysis"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.4",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
mq-image = "mq_image_analyze.cli:app"
mq-image-mcp = "mq_image_analyze.mcp.server:mcp.run"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mq_image_analyze*"]

[tool.setuptools.package-data]
"mq_image_analyze.web" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
